# claude-island

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
bridge/: bridge.js
bridge-rs/: Cargo.toml
bridge-rs/src/: main.rs
install/: setup-hooks.js
modules/pet/: pet.js  preview.html
notification-ui-demo/: a.html  index.html  script.js  style.css
notification-ui-demo2/: index.html  script.js  style.css
notification-ui-demo3/: index.html  script.js  style.css
notification-ui-demo4/: index.html  script.js  style.css
src/: check-focus.ps1  detect-source.ps1  get-active-title.ps1  main.js  preload.js  window-focus.js  ws-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  permission.rs  session.rs  window_focus.rs  ws_server.rs
src/island/: app.js  bridge.js  index.html  styles.css
src/island/css/: base.css  components.css  pixel-pets.css
src/island/css/themes/: dark.css  glass.css  gold.css  terminal.css
src/island/js/: app.js
src/island/modules/: pet.js  sound.js
