[package]
name = "island-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge CLI for Claude Island — connects AI agent hooks to the island UI"

[[bin]]
name = "island-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "net"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
