[package]
name = "claude-island"
version = "0.1.0"
description = "Dynamic Island notification panel for AI coding agents"
authors = ["0xxue"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claude_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri-plugin-log = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
] }
